// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Permalink DEFAULT_PERMALINK returns the default options 1`] = `
{
  "add_drops": false,
  "add_shortcut_warps_between_dungeons": false,
  "always_double_magic": false,
  "always_skip_triforce_cutscene": false,
  "chest_type_matches_contents": false,
  "cryptic_hints": true,
  "do_not_generate_spoiler_log": false,
  "excluded_locations": {
    "Angular Isles": {
      "Cave": false,
      "Peak": false,
      "Sunken Treasure": false,
    },
    "Bird's Peak Rock": {
      "Cave": false,
      "Sunken Treasure": false,
    },
    "Boating Course": {
      "Cave": false,
      "Raft": false,
      "Sunken Treasure": false,
    },
    "Bomb Island": {
      "Cave": false,
      "Lookout Platform - Defeat the Enemies": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Cliff Plateau Isles": {
      "Cave": false,
      "Highest Isle": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Crescent Moon Island": {
      "Chest": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Cyclops Reef": {
      "Destroy the Cannons and Gunboats": false,
      "Lookout Platform - Defeat the Enemies": false,
      "Sunken Treasure": false,
    },
    "Diamond Steppe Island": {
      "Big Octo": false,
      "Sunken Treasure": false,
      "Warp Maze Cave - First Chest": false,
      "Warp Maze Cave - Second Chest": false,
    },
    "Dragon Roost Cavern": {
      "Alcove With Water Jugs": false,
      "Big Key Chest": false,
      "Bird's Nest": false,
      "Boarded Up Chest": false,
      "Boss Stairs Left Chest": false,
      "Boss Stairs Right Chest": false,
      "Boss Stairs Right Pot": false,
      "Chest Across Lava Pit": false,
      "Dark Room": false,
      "First Room": false,
      "Gohma Heart Container": false,
      "Miniboss": false,
      "Pot Room Chest": false,
      "Pot on Upper Shelf in Pot Room": false,
      "Rat Room": false,
      "Rat Room Boarded Up Chest": false,
      "Tingle Chest in Hub Room": false,
      "Tingle Statue Chest": false,
      "Under Rope Bridge": false,
      "Water Jug on Upper Shelf": false,
    },
    "Dragon Roost Island": {
      "Chest on Top of Boulder": false,
      "Fly Across Platforms Around Island": false,
      "Rito Aerie - Give Hoskit 20 Golden Feathers": false,
      "Rito Aerie - Mail Sorting": false,
      "Secret Cave": false,
      "Sunken Treasure": false,
      "Wind Shrine": false,
    },
    "Earth Temple": {
      "Behind Curtain In Warp Pot Room": false,
      "Behind Curtain Next to Hammer Button": false,
      "Big Key Chest": false,
      "Casket in Second Crypt": false,
      "Chest Behind Destructible Walls": false,
      "Chest Behind Statues": false,
      "Chest In Three Blocks Room": false,
      "Chest in Third Crypt": false,
      "End of Foggy Room With Floormasters": false,
      "Jalhalla Heart Container": false,
      "Kill All Floormasters in Foggy Room": false,
      "Many Mirrors Room Left Chest": false,
      "Many Mirrors Room Right Chest": false,
      "Stalfos Crypt Room": false,
      "Stalfos Miniboss Room": false,
      "Tingle Statue Chest": false,
      "Transparent Chest In Warp Pot Room": false,
      "Transparent Chest in First Crypt": false,
    },
    "Eastern Fairy Island": {
      "Great Fairy": false,
      "Lookout Platform - Defeat the Cannons and Enemies": false,
      "Sunken Treasure": false,
    },
    "Eastern Triangle Island": {
      "Sunken Treasure": false,
    },
    "Fire Mountain": {
      "Big Octo": false,
      "Cave - Chest": false,
      "Lookout Platform - Destroy the Cannons": false,
      "Lookout Platform Chest": false,
      "Sunken Treasure": false,
    },
    "Five-Eye Reef": {
      "Destroy the Cannons": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Five-Star Isles": {
      "Lookout Platform - Destroy the Cannons": false,
      "Raft": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Flight Control Platform": {
      "Bird-Man Contest - First Prize": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Forbidden Woods": {
      "Big Key Chest": false,
      "Chest Across Red Hanging Flower": false,
      "Chest in Locked Tree Trunk": false,
      "Climb to Top Using Boko Baba Bulbs": false,
      "Double Mothula Room": false,
      "First Room": false,
      "Highest Pot in Vine Maze": false,
      "Hole in Tree": false,
      "Inside Hollow Tree's Mouth": false,
      "Kalle Demos Heart Container": false,
      "Morth Pit": false,
      "Mothula Miniboss Room": false,
      "Past Seeds Hanging by Vines": false,
      "Pot High Above Hollow Tree": false,
      "Tall Room Before Miniboss": false,
      "Tingle Statue Chest": false,
      "Vine Maze Left Chest": false,
      "Vine Maze Right Chest": false,
    },
    "Forest Haven": {
      "On Tree Branch": false,
      "Small Island Chest": false,
      "Sunken Treasure": false,
    },
    "Forsaken Fortress": {
      "Chest Guarded By Bokoblin": false,
      "Chest Inside Lower Jail Cell": false,
      "Chest Outside Upper Jail Cell": false,
      "Chest on Bed": false,
      "Helmaroc King Heart Container": false,
      "Phantom Ganon": false,
    },
    "Forsaken Fortress Sector": {
      "Sunken Treasure": false,
    },
    "Four-Eye Reef": {
      "Destroy the Cannons and Gunboats": false,
      "Sunken Treasure": false,
    },
    "Gale Isle": {
      "Sunken Treasure": false,
    },
    "Ganon's Tower": {
      "Maze Chest": false,
    },
    "Greatfish Isle": {
      "Hidden Chest": false,
      "Sunken Treasure": false,
    },
    "Headstone Island": {
      "Submarine": false,
      "Sunken Treasure": false,
      "Top of the Island": false,
    },
    "Horseshoe Island": {
      "Cave": false,
      "Northwestern Lookout Platform": false,
      "Play Golf": false,
      "Southeastern Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Hyrule": {
      "Master Sword Chamber": false,
    },
    "Ice Ring Isle": {
      "Cave - Chest": false,
      "Frozen Chest": false,
      "Inner Cave - Chest": false,
      "Sunken Treasure": false,
    },
    "Islet of Steel": {
      "Interior": false,
      "Lookout Platform - Defeat the Enemies": false,
      "Sunken Treasure": false,
    },
    "Mailbox": {
      "Beedle's Gold Membership Reward": false,
      "Beedle's Silver Membership Reward": false,
      "Letter Advertising Bombs in Beedle's Shop": false,
      "Letter Advertising Rock Spire Shop Ship": false,
      "Letter from Aryll": false,
      "Letter from Baito": false,
      "Letter from Baito's Mother": false,
      "Letter from Grandma": false,
      "Letter from Hoskit's Girlfriend": false,
      "Letter from Komali's Father": false,
      "Letter from Orca": false,
      "Letter from Tingle": false,
    },
    "Mother and Child Isles": {
      "Inside Mother Isle": false,
      "Sunken Treasure": false,
    },
    "Needle Rock Isle": {
      "Cave": false,
      "Chest": false,
      "Golden Gunboat": false,
      "Sunken Treasure": false,
    },
    "Northern Fairy Island": {
      "Great Fairy": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Northern Triangle Island": {
      "Sunken Treasure": false,
    },
    "Outset Island": {
      "Dig up Black Soil": false,
      "Great Fairy": false,
      "Jabun's Cave": false,
      "Mesa the Grasscutter's House": false,
      "Orca - Give 10 Knight's Crests": false,
      "Orca - Hit 500 Times": false,
      "Savage Labyrinth - Floor 30": false,
      "Savage Labyrinth - Floor 50": false,
      "Sunken Treasure": false,
      "Underneath Link's House": false,
    },
    "Overlook Island": {
      "Cave": false,
      "Sunken Treasure": false,
    },
    "Pawprint Isle": {
      "Chuchu Cave - Behind Left Boulder": false,
      "Chuchu Cave - Behind Right Boulder": false,
      "Chuchu Cave - Chest": false,
      "Chuchu Cave - Scale the Wall": false,
      "Lookout Platform - Defeat the Enemies": false,
      "Sunken Treasure": false,
      "Wizzrobe Cave": false,
    },
    "Private Oasis": {
      "Big Octo": false,
      "Cabana Labyrinth - Lower Floor Chest": false,
      "Cabana Labyrinth - Upper Floor Chest": false,
      "Chest at Top of Waterfall": false,
      "Sunken Treasure": false,
    },
    "Rock Spire Isle": {
      "Beedle's Special Shop Ship - 500 Rupee Item": false,
      "Beedle's Special Shop Ship - 900 Rupee Item": false,
      "Beedle's Special Shop Ship - 950 Rupee Item": false,
      "Cave": false,
      "Center Lookout Platform": false,
      "Eastern Lookout Platform - Destroy the Cannons": false,
      "Southeast Gunboat": false,
      "Sunken Treasure": false,
      "Western Lookout Platform - Destroy the Cannons": false,
    },
    "Seven-Star Isles": {
      "Big Octo": false,
      "Center Lookout Platform": false,
      "Northern Lookout Platform": false,
      "Southern Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Shark Island": {
      "Cave": false,
      "Sunken Treasure": false,
    },
    "Six-Eye Reef": {
      "Destroy the Cannons and Gunboats": false,
      "Lookout Platform - Destroy the Cannons": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Southern Fairy Island": {
      "Great Fairy": false,
      "Lookout Platform - Destroy the Northwest Cannons": false,
      "Lookout Platform - Destroy the Southeast Cannons": false,
      "Sunken Treasure": false,
    },
    "Southern Triangle Island": {
      "Sunken Treasure": false,
    },
    "Spectacle Island": {
      "Barrel Shooting - First Prize": false,
      "Barrel Shooting - Second Prize": false,
      "Sunken Treasure": false,
    },
    "Star Belt Archipelago": {
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Star Island": {
      "Cave": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Stone Watcher Island": {
      "Cave": false,
      "Lookout Platform - Destroy the Cannons": false,
      "Lookout Platform Chest": false,
      "Sunken Treasure": false,
    },
    "The Great Sea": {
      "Beedle's Shop Ship - 20 Rupee Item": false,
      "Cyclos": false,
      "Ghost Ship": false,
      "Goron Trading Reward": false,
      "Salvage Corp Gift": false,
      "Withered Trees": false,
    },
    "Thorned Fairy Island": {
      "Great Fairy": false,
      "Northeastern Lookout Platform - Destroy the Cannons": false,
      "Southwestern Lookout Platform - Defeat the Enemies": false,
      "Sunken Treasure": false,
    },
    "Three-Eye Reef": {
      "Destroy the Cannons and Gunboats": false,
      "Sunken Treasure": false,
    },
    "Tingle Island": {
      "Ankle - Reward for All Tingle Statues": false,
      "Big Octo": false,
      "Sunken Treasure": false,
    },
    "Tower of the Gods": {
      "Big Key Chest": false,
      "Chest Behind Bombable Walls": false,
      "Darknut Miniboss Room": false,
      "Eastern Pot in Big Key Chest Room": false,
      "First Chest Guarded by Armos Knights": false,
      "Floating Platforms Room": false,
      "Gohdan Heart Container": false,
      "Hop Across Floating Boxes": false,
      "Light Two Torches": false,
      "Pot Behind Bombable Walls": false,
      "Second Chest Guarded by Armos Knights": false,
      "Shoot Eye Above Skulls Room Chest": false,
      "Skulls Room Chest": false,
      "Stone Tablet": false,
      "Tingle Statue Chest": false,
      "Top of Floating Platforms Room": false,
    },
    "Tower of the Gods Sector": {
      "Sunken Treasure": false,
    },
    "Two-Eye Reef": {
      "Big Octo Great Fairy": false,
      "Destroy the Cannons and Gunboats": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Western Fairy Island": {
      "Great Fairy": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Wind Temple": {
      "Behind Stone Head in Hidden Upper Room": false,
      "Behind Stone Head in Many Cyclones Room": false,
      "Big Key Chest": false,
      "Chest Behind Seven Armos": false,
      "Chest Behind Stone Head": false,
      "Chest Between Two Dirt Patches": false,
      "Chest In Many Cyclones Room": false,
      "Chest In Middle Of Hub Room": false,
      "Chest at Top of Hub Room": false,
      "Chest in Left Alcove": false,
      "Kill All Enemies in Tall Basement Room": false,
      "Molgera Heart Container": false,
      "Spike Wall Room - Destroy All Cracked Floors": false,
      "Spike Wall Room - First Chest": false,
      "Tingle Statue Chest": false,
      "Wizzrobe Miniboss Room": false,
    },
    "Windfall Island": {
      "40 Rupee Auction": false,
      "5 Rupee Auction": false,
      "60 Rupee Auction": false,
      "80 Rupee Auction": false,
      "Battlesquid - First Prize": false,
      "Battlesquid - Second Prize": false,
      "Battlesquid - Under 20 Shots Prize": false,
      "Cafe Bar - Postman": false,
      "Chu Jelly Juice Shop - Give 15 Blue Chu Jelly": false,
      "Chu Jelly Juice Shop - Give 15 Green Chu Jelly": false,
      "House of Wealth Chest": false,
      "Ivan - Catch Killer Bees": false,
      "Jail - Maze Chest": false,
      "Jail - Tingle - First Gift": false,
      "Jail - Tingle - Second Gift": false,
      "Kamo - Full Moon Photo": false,
      "Kane - Place Postman Statue on Gate": false,
      "Kane - Place Shop Guru Statue on Gate": false,
      "Kane - Place Six Flags on Gate": false,
      "Kane - Place Six Idols on Gate": false,
      "Kreeb - Light Up Lighthouse": false,
      "Lenzo's House - Become Lenzo's Assistant": false,
      "Lenzo's House - Bring Forest Firefly": false,
      "Lenzo's House - Left Chest": false,
      "Lenzo's House - Right Chest": false,
      "Linda and Anton": false,
      "Maggie - Delivery Reward": false,
      "Maggie - Free Item": false,
      "Maggie's Father - Give 20 Skull Necklaces": false,
      "Mila - Follow the Thief": false,
      "Minenco - Miss Windfall Photo": false,
      "Mrs. Marie - Catch Killer Bees": false,
      "Mrs. Marie - Give 1 Joy Pendant": false,
      "Mrs. Marie - Give 21 Joy Pendants": false,
      "Mrs. Marie - Give 40 Joy Pendants": false,
      "Pirate Ship": false,
      "Pompie and Vera - Secret Meeting Photo": false,
      "Sam - Decorate the Town": false,
      "Sunken Treasure": false,
      "Tott - Teach Rhythm": false,
      "Transparent Chest": false,
      "Zunari - Stock Exotic Flower in Zunari's Shop": false,
    },
  },
  "fishmen_hints": true,
  "fix_auction": false,
  "hero_mode": false,
  "hint_importance": false,
  "hoho_hint_shards": false,
  "hoho_hints": true,
  "instant_text_boxes": true,
  "kamo_any_moon_phase": false,
  "korl_hints": false,
  "korl_hints_swords": false,
  "kreeb_hints_bows": false,
  "logic_obscurity": "None",
  "logic_precision": "None",
  "mila_speedup": "None",
  "mix_entrances": "Separate Dungeons From Caves and Fountains",
  "num_barren_hints": 0,
  "num_extra_starting_items": 0,
  "num_item_hints": 15,
  "num_location_hints": 5,
  "num_path_hints": 0,
  "num_required_bosses": 4,
  "num_starting_triforce_shards": 0,
  "open_drc": true,
  "prioritize_remote_hints": false,
  "prioritize_required_bosses": false,
  "progression_battlesquid": false,
  "progression_big_octos_gunboats": false,
  "progression_combat_secret_caves": false,
  "progression_dungeon_secrets": false,
  "progression_dungeons": true,
  "progression_expensive_purchases": true,
  "progression_eye_reef_chests": false,
  "progression_free_gifts": true,
  "progression_great_fairies": true,
  "progression_island_puzzles": false,
  "progression_long_sidequests": false,
  "progression_mail": false,
  "progression_minigames": false,
  "progression_misc": true,
  "progression_platforms_rafts": false,
  "progression_puzzle_secret_caves": true,
  "progression_savage_labyrinth": false,
  "progression_short_sidequests": false,
  "progression_spoils_trading": false,
  "progression_submarines": false,
  "progression_tingle_chests": false,
  "progression_treasure_charts": false,
  "progression_triforce_charts": false,
  "rainbow_rupee_progress": false,
  "randomize_boss_entrances": false,
  "randomize_charts": false,
  "randomize_dungeon_entrances": false,
  "randomize_enemies": false,
  "randomize_enemy_palettes": false,
  "randomize_fairy_fountain_entrances": false,
  "randomize_miniboss_entrances": false,
  "randomize_secret_cave_entrances": false,
  "randomize_secret_cave_inner_entrances": false,
  "randomize_starting_island": false,
  "remove_ballad_of_gales_warp_in_cutscene": false,
  "remove_music": false,
  "required_bosses": false,
  "reveal_full_sea_chart": true,
  "seed_name": "A",
  "shorten_mail_minigame": false,
  "shuffle_big_keys": "Own Dungeon",
  "shuffle_maps_and_compasses": "Own Dungeon",
  "shuffle_small_keys": "Own Dungeon",
  "skip_drc_plat_cs": false,
  "skip_rematch_bosses": true,
  "speedup_lenzos_assistant": false,
  "speedup_tingle_jail": false,
  "split_interdungeon_warps_by_required": false,
  "starting_blue_chu_jelly": 0,
  "starting_boko_baba_seed": 0,
  "starting_gear": {
    "Bait Bag": 0,
    "Ballad of Gales": 1,
    "Beedle's Chart": 0,
    "Bombs": 0,
    "Boomerang": 0,
    "Cabana Deed": 0,
    "Command Melody": 0,
    "DRC Big Key": 0,
    "DRC Compass": 0,
    "DRC Dungeon Map": 0,
    "DRC Small Key": 0,
    "Deku Leaf": 0,
    "Delivery Bag": 0,
    "Din's Pearl": 0,
    "Dragon Tingle Statue": 0,
    "ET Big Key": 0,
    "ET Compass": 0,
    "ET Dungeon Map": 0,
    "ET Small Key": 0,
    "Earth God's Lyric": 0,
    "Earth Tingle Statue": 0,
    "Empty Bottle": 0,
    "FF Compass": 0,
    "FF Dungeon Map": 0,
    "FW Big Key": 0,
    "FW Compass": 0,
    "FW Dungeon Map": 0,
    "FW Small Key": 0,
    "Farore's Pearl": 0,
    "Fill-Up Coupon": 0,
    "Forbidden Tingle Statue": 0,
    "Ghost Ship Chart": 0,
    "Goddess Tingle Statue": 0,
    "Grappling Hook": 0,
    "Great Fairy Chart": 0,
    "Hero's Charm": 0,
    "Hookshot": 0,
    "Hurricane Spin": 0,
    "Iron Boots": 0,
    "Light Ring Chart": 0,
    "Maggie's Letter": 0,
    "Magic Armor": 0,
    "Moblin's Letter": 0,
    "Nayru's Pearl": 0,
    "Note to Mom": 0,
    "Octo Chart": 0,
    "Platform Chart": 0,
    "Power Bracelets": 0,
    "Progressive Bomb Bag": 0,
    "Progressive Bow": 0,
    "Progressive Magic Meter": 1,
    "Progressive Picto Box": 0,
    "Progressive Quiver": 0,
    "Progressive Shield": 1,
    "Progressive Sword": 0,
    "Progressive Wallet": 0,
    "Secret Cave Chart": 0,
    "Skull Hammer": 0,
    "Song of Passing": 1,
    "Spoils Bag": 0,
    "Submarine Chart": 0,
    "Telescope": 0,
    "Tingle Tuner": 0,
    "Tingle's Chart": 0,
    "TotG Big Key": 0,
    "TotG Compass": 0,
    "TotG Dungeon Map": 0,
    "TotG Small Key": 0,
    "WT Big Key": 0,
    "WT Compass": 0,
    "WT Dungeon Map": 0,
    "WT Small Key": 0,
    "Wind God's Aria": 0,
    "Wind Tingle Statue": 0,
  },
  "starting_golden_feather": 0,
  "starting_green_chu_jelly": 0,
  "starting_hcs": 3,
  "starting_joy_pendant": 0,
  "starting_knights_crest": 0,
  "starting_pohs": 0,
  "starting_red_chu_jelly": 0,
  "starting_skull_necklace": 0,
  "swift_sail": true,
  "sword_mode": "Start with Hero's Sword",
  "trap_chests": false,
  "version": "dev_tanjo3.1.10.5_92859f0",
  "wallet_fill_behavior": false,
}
`;

exports[`Permalink DROPDOWN_OPTIONS returns the correct dropdown options 1`] = `
{
  "logic_obscurity": [
    "None",
    "Normal",
    "Hard",
    "Very Hard",
  ],
  "logic_precision": [
    "None",
    "Normal",
    "Hard",
    "Very Hard",
  ],
  "mila_speedup": [
    "None",
    "Shortened",
    "Instant",
  ],
  "mix_entrances": [
    "Separate Dungeons From Caves and Fountains",
    "Mix Dungeons and Caves and Fountains",
  ],
  "num_required_bosses": [
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "num_starting_triforce_shards": [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
  ],
  "shuffle_big_keys": [
    "Vanilla",
    "Start With",
    "Own Dungeon",
    "Any Dungeon",
    "Overworld",
    "Anywhere",
  ],
  "shuffle_maps_and_compasses": [
    "Vanilla",
    "Start With",
    "Own Dungeon",
    "Any Dungeon",
    "Overworld",
    "Anywhere",
  ],
  "shuffle_small_keys": [
    "Vanilla",
    "Start With",
    "Own Dungeon",
    "Any Dungeon",
    "Overworld",
    "Anywhere",
  ],
  "sword_mode": [
    "Start with Hero's Sword",
    "No Starting Sword",
    "Swordless",
  ],
}
`;

exports[`Permalink DUNGEON_ITEM_SHUFFLE_MODE_OPTIONS returns the correct dungeon item shuffle mode options 1`] = `
{
  "ANYWHERE": "Anywhere",
  "ANY_DUNGEON": "Any Dungeon",
  "OVERWORLD": "Overworld",
  "OWN_DUNGEON": "Own Dungeon",
  "START_WITH": "Start With",
  "VANILLA": "Vanilla",
}
`;

exports[`Permalink MIX_ENTRANCES_OPTIONS returns the correct options 1`] = `
{
  "MIX_DUNGEONS_AND_CAVES_AND_FOUNTAINS": "Mix Dungeons and Caves and Fountains",
  "SEPARATE_DUNGEONS_FROM_CAVES_AND_FOUNTAINS": "Separate Dungeons From Caves and Fountains",
}
`;

exports[`Permalink OPTIONS returns the correct options 1`] = `
{
  "ADD_DROPS": "add_drops",
  "ADD_SHORTCUT_WARPS_BETWEEN_DUNGEONS": "add_shortcut_warps_between_dungeons",
  "ALWAYS_DOUBLE_MAGIC": "always_double_magic",
  "ALWAYS_SKIP_TRIFORCE_CUTSCENE": "always_skip_triforce_cutscene",
  "CHEST_TYPE_MATCHES_CONTENTS": "chest_type_matches_contents",
  "CRYPTIC_HINTS": "cryptic_hints",
  "DO_NOT_GENERATE_SPOILER_LOG": "do_not_generate_spoiler_log",
  "EXCLUDED_LOCATIONS": "excluded_locations",
  "FISHMEN_HINTS": "fishmen_hints",
  "FIX_AUCTION": "fix_auction",
  "HERO_MODE": "hero_mode",
  "HINT_IMPORTANCE": "hint_importance",
  "HOHO_HINTS": "hoho_hints",
  "HOHO_HINT_SHARDS": "hoho_hint_shards",
  "INSTANT_TEXT_BOXES": "instant_text_boxes",
  "KAMO_ANY_MOON_PHASE": "kamo_any_moon_phase",
  "KORL_HINTS": "korl_hints",
  "KORL_HINTS_SWORDS": "korl_hints_swords",
  "KREEB_HINTS_BOWS": "kreeb_hints_bows",
  "LOGIC_OBSCURITY": "logic_obscurity",
  "LOGIC_PRECISION": "logic_precision",
  "MILA_SPEEDUP": "mila_speedup",
  "MIX_ENTRANCES": "mix_entrances",
  "NUM_BARREN_HINTS": "num_barren_hints",
  "NUM_EXTRA_STARTING_ITEMS": "num_extra_starting_items",
  "NUM_ITEM_HINTS": "num_item_hints",
  "NUM_LOCATION_HINTS": "num_location_hints",
  "NUM_PATH_HINTS": "num_path_hints",
  "NUM_REQUIRED_BOSSES": "num_required_bosses",
  "NUM_STARTING_TRIFORCE_SHARDS": "num_starting_triforce_shards",
  "OPEN_DRC": "open_drc",
  "PRIORITIZE_REMOTE_HINTS": "prioritize_remote_hints",
  "PRIORITIZE_REQUIRED_BOSSES": "prioritize_required_bosses",
  "PROGRESSION_BATTLESQUID": "progression_battlesquid",
  "PROGRESSION_BIG_OCTOS_GUNBOATS": "progression_big_octos_gunboats",
  "PROGRESSION_COMBAT_SECRET_CAVES": "progression_combat_secret_caves",
  "PROGRESSION_DUNGEONS": "progression_dungeons",
  "PROGRESSION_DUNGEON_SECRETS": "progression_dungeon_secrets",
  "PROGRESSION_EXPENSIVE_PURCHASES": "progression_expensive_purchases",
  "PROGRESSION_EYE_REEF_CHESTS": "progression_eye_reef_chests",
  "PROGRESSION_FREE_GIFTS": "progression_free_gifts",
  "PROGRESSION_GREAT_FAIRIES": "progression_great_fairies",
  "PROGRESSION_ISLAND_PUZZLES": "progression_island_puzzles",
  "PROGRESSION_LONG_SIDEQUESTS": "progression_long_sidequests",
  "PROGRESSION_MAIL": "progression_mail",
  "PROGRESSION_MINIGAMES": "progression_minigames",
  "PROGRESSION_MISC": "progression_misc",
  "PROGRESSION_PLATFORMS_RAFTS": "progression_platforms_rafts",
  "PROGRESSION_PUZZLE_SECRET_CAVES": "progression_puzzle_secret_caves",
  "PROGRESSION_SAVAGE_LABYRINTH": "progression_savage_labyrinth",
  "PROGRESSION_SHORT_SIDEQUESTS": "progression_short_sidequests",
  "PROGRESSION_SPOILS_TRADING": "progression_spoils_trading",
  "PROGRESSION_SUBMARINES": "progression_submarines",
  "PROGRESSION_TINGLE_CHESTS": "progression_tingle_chests",
  "PROGRESSION_TREASURE_CHARTS": "progression_treasure_charts",
  "PROGRESSION_TRIFORCE_CHARTS": "progression_triforce_charts",
  "RAINBOW_RUPEE_PROGRESS": "rainbow_rupee_progress",
  "RANDOMIZE_BOSS_ENTRANCES": "randomize_boss_entrances",
  "RANDOMIZE_CHARTS": "randomize_charts",
  "RANDOMIZE_DUNGEON_ENTRANCES": "randomize_dungeon_entrances",
  "RANDOMIZE_ENEMIES": "randomize_enemies",
  "RANDOMIZE_ENEMY_PALETTES": "randomize_enemy_palettes",
  "RANDOMIZE_FAIRY_FOUNTAIN_ENTRANCES": "randomize_fairy_fountain_entrances",
  "RANDOMIZE_MINIBOSS_ENTRANCES": "randomize_miniboss_entrances",
  "RANDOMIZE_SECRET_CAVE_ENTRANCES": "randomize_secret_cave_entrances",
  "RANDOMIZE_SECRET_CAVE_INNER_ENTRANCES": "randomize_secret_cave_inner_entrances",
  "RANDOMIZE_STARTING_ISLAND": "randomize_starting_island",
  "REMOVE_BALLAD_OF_GALES_WARP_IN_CUTSCENE": "remove_ballad_of_gales_warp_in_cutscene",
  "REMOVE_MUSIC": "remove_music",
  "REQUIRED_BOSSES": "required_bosses",
  "REVEAL_FULL_SEA_CHART": "reveal_full_sea_chart",
  "SEED_NAME": "seed_name",
  "SHORTEN_MAIL_MINIGAME": "shorten_mail_minigame",
  "SHUFFLE_BIG_KEYS": "shuffle_big_keys",
  "SHUFFLE_MAPS_AND_COMPASSES": "shuffle_maps_and_compasses",
  "SHUFFLE_SMALL_KEYS": "shuffle_small_keys",
  "SKIP_DRC_PLAT_CS": "skip_drc_plat_cs",
  "SKIP_REMATCH_BOSSES": "skip_rematch_bosses",
  "SPEEDUP_LENZOS_ASSISTANT": "speedup_lenzos_assistant",
  "SPEEDUP_TINGLE_JAIL": "speedup_tingle_jail",
  "SPLIT_INTERDUNGEON_WARPS_BY_REQUIRED": "split_interdungeon_warps_by_required",
  "STARTING_BLUE_CHU_JELLY": "starting_blue_chu_jelly",
  "STARTING_BOKO_BABA_SEED": "starting_boko_baba_seed",
  "STARTING_GEAR": "starting_gear",
  "STARTING_GOLDEN_FEATHER": "starting_golden_feather",
  "STARTING_GREEN_CHU_JELLY": "starting_green_chu_jelly",
  "STARTING_HCS": "starting_hcs",
  "STARTING_JOY_PENDANT": "starting_joy_pendant",
  "STARTING_KNIGHTS_CREST": "starting_knights_crest",
  "STARTING_POHS": "starting_pohs",
  "STARTING_RED_CHU_JELLY": "starting_red_chu_jelly",
  "STARTING_SKULL_NECKLACE": "starting_skull_necklace",
  "SWIFT_SAIL": "swift_sail",
  "SWORD_MODE": "sword_mode",
  "TRAP_CHESTS": "trap_chests",
  "VERSION": "version",
  "WALLET_FILL_BEHAVIOR": "wallet_fill_behavior",
}
`;

exports[`Permalink SWORD_MODE_OPTIONS returns the correct options 1`] = `
{
  "NO_STARTING_SWORD": "No Starting Sword",
  "START_WITH_HEROS_SWORD": "Start with Hero's Sword",
  "SWORDLESS": "Swordless",
}
`;

exports[`Permalink decode decodes a permalink 1`] = `
{
  "add_drops": false,
  "add_shortcut_warps_between_dungeons": true,
  "always_double_magic": false,
  "always_skip_triforce_cutscene": false,
  "chest_type_matches_contents": true,
  "cryptic_hints": false,
  "do_not_generate_spoiler_log": true,
  "excluded_locations": {
    "Angular Isles": {
      "Cave": false,
      "Peak": false,
      "Sunken Treasure": false,
    },
    "Bird's Peak Rock": {
      "Cave": false,
      "Sunken Treasure": false,
    },
    "Boating Course": {
      "Cave": false,
      "Raft": false,
      "Sunken Treasure": false,
    },
    "Bomb Island": {
      "Cave": false,
      "Lookout Platform - Defeat the Enemies": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Cliff Plateau Isles": {
      "Cave": false,
      "Highest Isle": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Crescent Moon Island": {
      "Chest": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Cyclops Reef": {
      "Destroy the Cannons and Gunboats": false,
      "Lookout Platform - Defeat the Enemies": false,
      "Sunken Treasure": false,
    },
    "Diamond Steppe Island": {
      "Big Octo": false,
      "Sunken Treasure": false,
      "Warp Maze Cave - First Chest": false,
      "Warp Maze Cave - Second Chest": false,
    },
    "Dragon Roost Cavern": {
      "Alcove With Water Jugs": false,
      "Big Key Chest": false,
      "Bird's Nest": false,
      "Boarded Up Chest": false,
      "Boss Stairs Left Chest": false,
      "Boss Stairs Right Chest": false,
      "Boss Stairs Right Pot": false,
      "Chest Across Lava Pit": false,
      "Dark Room": false,
      "First Room": false,
      "Gohma Heart Container": false,
      "Miniboss": false,
      "Pot Room Chest": false,
      "Pot on Upper Shelf in Pot Room": false,
      "Rat Room": false,
      "Rat Room Boarded Up Chest": false,
      "Tingle Chest in Hub Room": false,
      "Tingle Statue Chest": false,
      "Under Rope Bridge": false,
      "Water Jug on Upper Shelf": false,
    },
    "Dragon Roost Island": {
      "Chest on Top of Boulder": false,
      "Fly Across Platforms Around Island": false,
      "Rito Aerie - Give Hoskit 20 Golden Feathers": false,
      "Rito Aerie - Mail Sorting": false,
      "Secret Cave": false,
      "Sunken Treasure": false,
      "Wind Shrine": false,
    },
    "Earth Temple": {
      "Behind Curtain In Warp Pot Room": false,
      "Behind Curtain Next to Hammer Button": false,
      "Big Key Chest": false,
      "Casket in Second Crypt": false,
      "Chest Behind Destructible Walls": false,
      "Chest Behind Statues": false,
      "Chest In Three Blocks Room": false,
      "Chest in Third Crypt": false,
      "End of Foggy Room With Floormasters": false,
      "Jalhalla Heart Container": false,
      "Kill All Floormasters in Foggy Room": false,
      "Many Mirrors Room Left Chest": false,
      "Many Mirrors Room Right Chest": false,
      "Stalfos Crypt Room": false,
      "Stalfos Miniboss Room": false,
      "Tingle Statue Chest": false,
      "Transparent Chest In Warp Pot Room": false,
      "Transparent Chest in First Crypt": false,
    },
    "Eastern Fairy Island": {
      "Great Fairy": false,
      "Lookout Platform - Defeat the Cannons and Enemies": false,
      "Sunken Treasure": false,
    },
    "Eastern Triangle Island": {
      "Sunken Treasure": false,
    },
    "Fire Mountain": {
      "Big Octo": false,
      "Cave - Chest": false,
      "Lookout Platform - Destroy the Cannons": false,
      "Lookout Platform Chest": false,
      "Sunken Treasure": false,
    },
    "Five-Eye Reef": {
      "Destroy the Cannons": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Five-Star Isles": {
      "Lookout Platform - Destroy the Cannons": false,
      "Raft": false,
      "Submarine": true,
      "Sunken Treasure": false,
    },
    "Flight Control Platform": {
      "Bird-Man Contest - First Prize": false,
      "Submarine": true,
      "Sunken Treasure": false,
    },
    "Forbidden Woods": {
      "Big Key Chest": false,
      "Chest Across Red Hanging Flower": false,
      "Chest in Locked Tree Trunk": false,
      "Climb to Top Using Boko Baba Bulbs": false,
      "Double Mothula Room": false,
      "First Room": false,
      "Highest Pot in Vine Maze": false,
      "Hole in Tree": false,
      "Inside Hollow Tree's Mouth": false,
      "Kalle Demos Heart Container": false,
      "Morth Pit": false,
      "Mothula Miniboss Room": false,
      "Past Seeds Hanging by Vines": false,
      "Pot High Above Hollow Tree": false,
      "Tall Room Before Miniboss": false,
      "Tingle Statue Chest": false,
      "Vine Maze Left Chest": false,
      "Vine Maze Right Chest": false,
    },
    "Forest Haven": {
      "On Tree Branch": false,
      "Small Island Chest": false,
      "Sunken Treasure": false,
    },
    "Forsaken Fortress": {
      "Chest Guarded By Bokoblin": false,
      "Chest Inside Lower Jail Cell": false,
      "Chest Outside Upper Jail Cell": false,
      "Chest on Bed": false,
      "Helmaroc King Heart Container": false,
      "Phantom Ganon": false,
    },
    "Forsaken Fortress Sector": {
      "Sunken Treasure": false,
    },
    "Four-Eye Reef": {
      "Destroy the Cannons and Gunboats": false,
      "Sunken Treasure": false,
    },
    "Gale Isle": {
      "Sunken Treasure": false,
    },
    "Ganon's Tower": {
      "Maze Chest": false,
    },
    "Greatfish Isle": {
      "Hidden Chest": false,
      "Sunken Treasure": false,
    },
    "Headstone Island": {
      "Submarine": false,
      "Sunken Treasure": false,
      "Top of the Island": false,
    },
    "Horseshoe Island": {
      "Cave": false,
      "Northwestern Lookout Platform": false,
      "Play Golf": true,
      "Southeastern Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Hyrule": {
      "Master Sword Chamber": false,
    },
    "Ice Ring Isle": {
      "Cave - Chest": false,
      "Frozen Chest": false,
      "Inner Cave - Chest": false,
      "Sunken Treasure": false,
    },
    "Islet of Steel": {
      "Interior": false,
      "Lookout Platform - Defeat the Enemies": false,
      "Sunken Treasure": false,
    },
    "Mailbox": {
      "Beedle's Gold Membership Reward": false,
      "Beedle's Silver Membership Reward": false,
      "Letter Advertising Bombs in Beedle's Shop": false,
      "Letter Advertising Rock Spire Shop Ship": false,
      "Letter from Aryll": false,
      "Letter from Baito": false,
      "Letter from Baito's Mother": false,
      "Letter from Grandma": false,
      "Letter from Hoskit's Girlfriend": false,
      "Letter from Komali's Father": false,
      "Letter from Orca": false,
      "Letter from Tingle": false,
    },
    "Mother and Child Isles": {
      "Inside Mother Isle": false,
      "Sunken Treasure": false,
    },
    "Needle Rock Isle": {
      "Cave": false,
      "Chest": false,
      "Golden Gunboat": false,
      "Sunken Treasure": false,
    },
    "Northern Fairy Island": {
      "Great Fairy": true,
      "Submarine": true,
      "Sunken Treasure": false,
    },
    "Northern Triangle Island": {
      "Sunken Treasure": false,
    },
    "Outset Island": {
      "Dig up Black Soil": false,
      "Great Fairy": true,
      "Jabun's Cave": true,
      "Mesa the Grasscutter's House": false,
      "Orca - Give 10 Knight's Crests": false,
      "Orca - Hit 500 Times": false,
      "Savage Labyrinth - Floor 30": false,
      "Savage Labyrinth - Floor 50": false,
      "Sunken Treasure": false,
      "Underneath Link's House": false,
    },
    "Overlook Island": {
      "Cave": false,
      "Sunken Treasure": false,
    },
    "Pawprint Isle": {
      "Chuchu Cave - Behind Left Boulder": false,
      "Chuchu Cave - Behind Right Boulder": false,
      "Chuchu Cave - Chest": false,
      "Chuchu Cave - Scale the Wall": false,
      "Lookout Platform - Defeat the Enemies": false,
      "Sunken Treasure": false,
      "Wizzrobe Cave": false,
    },
    "Private Oasis": {
      "Big Octo": false,
      "Cabana Labyrinth - Lower Floor Chest": false,
      "Cabana Labyrinth - Upper Floor Chest": false,
      "Chest at Top of Waterfall": false,
      "Sunken Treasure": false,
    },
    "Rock Spire Isle": {
      "Beedle's Special Shop Ship - 500 Rupee Item": false,
      "Beedle's Special Shop Ship - 900 Rupee Item": false,
      "Beedle's Special Shop Ship - 950 Rupee Item": false,
      "Cave": false,
      "Center Lookout Platform": false,
      "Eastern Lookout Platform - Destroy the Cannons": false,
      "Southeast Gunboat": false,
      "Sunken Treasure": false,
      "Western Lookout Platform - Destroy the Cannons": false,
    },
    "Seven-Star Isles": {
      "Big Octo": false,
      "Center Lookout Platform": false,
      "Northern Lookout Platform": false,
      "Southern Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Shark Island": {
      "Cave": false,
      "Sunken Treasure": false,
    },
    "Six-Eye Reef": {
      "Destroy the Cannons and Gunboats": false,
      "Lookout Platform - Destroy the Cannons": false,
      "Submarine": false,
      "Sunken Treasure": false,
    },
    "Southern Fairy Island": {
      "Great Fairy": false,
      "Lookout Platform - Destroy the Northwest Cannons": false,
      "Lookout Platform - Destroy the Southeast Cannons": false,
      "Sunken Treasure": false,
    },
    "Southern Triangle Island": {
      "Sunken Treasure": false,
    },
    "Spectacle Island": {
      "Barrel Shooting - First Prize": false,
      "Barrel Shooting - Second Prize": false,
      "Sunken Treasure": false,
    },
    "Star Belt Archipelago": {
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Star Island": {
      "Cave": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Stone Watcher Island": {
      "Cave": false,
      "Lookout Platform - Destroy the Cannons": false,
      "Lookout Platform Chest": false,
      "Sunken Treasure": false,
    },
    "The Great Sea": {
      "Beedle's Shop Ship - 20 Rupee Item": false,
      "Cyclos": false,
      "Ghost Ship": false,
      "Goron Trading Reward": false,
      "Salvage Corp Gift": false,
      "Withered Trees": false,
    },
    "Thorned Fairy Island": {
      "Great Fairy": false,
      "Northeastern Lookout Platform - Destroy the Cannons": false,
      "Southwestern Lookout Platform - Defeat the Enemies": false,
      "Sunken Treasure": false,
    },
    "Three-Eye Reef": {
      "Destroy the Cannons and Gunboats": false,
      "Sunken Treasure": false,
    },
    "Tingle Island": {
      "Ankle - Reward for All Tingle Statues": true,
      "Big Octo": false,
      "Sunken Treasure": false,
    },
    "Tower of the Gods": {
      "Big Key Chest": false,
      "Chest Behind Bombable Walls": false,
      "Darknut Miniboss Room": false,
      "Eastern Pot in Big Key Chest Room": false,
      "First Chest Guarded by Armos Knights": false,
      "Floating Platforms Room": false,
      "Gohdan Heart Container": false,
      "Hop Across Floating Boxes": false,
      "Light Two Torches": false,
      "Pot Behind Bombable Walls": false,
      "Second Chest Guarded by Armos Knights": false,
      "Shoot Eye Above Skulls Room Chest": false,
      "Skulls Room Chest": false,
      "Stone Tablet": false,
      "Tingle Statue Chest": false,
      "Top of Floating Platforms Room": false,
    },
    "Tower of the Gods Sector": {
      "Sunken Treasure": false,
    },
    "Two-Eye Reef": {
      "Big Octo Great Fairy": false,
      "Destroy the Cannons and Gunboats": false,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Western Fairy Island": {
      "Great Fairy": true,
      "Lookout Platform": false,
      "Sunken Treasure": false,
    },
    "Wind Temple": {
      "Behind Stone Head in Hidden Upper Room": false,
      "Behind Stone Head in Many Cyclones Room": false,
      "Big Key Chest": false,
      "Chest Behind Seven Armos": false,
      "Chest Behind Stone Head": false,
      "Chest Between Two Dirt Patches": false,
      "Chest In Many Cyclones Room": false,
      "Chest In Middle Of Hub Room": false,
      "Chest at Top of Hub Room": false,
      "Chest in Left Alcove": false,
      "Kill All Enemies in Tall Basement Room": false,
      "Molgera Heart Container": false,
      "Spike Wall Room - Destroy All Cracked Floors": false,
      "Spike Wall Room - First Chest": false,
      "Tingle Statue Chest": false,
      "Wizzrobe Miniboss Room": false,
    },
    "Windfall Island": {
      "40 Rupee Auction": false,
      "5 Rupee Auction": false,
      "60 Rupee Auction": false,
      "80 Rupee Auction": false,
      "Battlesquid - First Prize": false,
      "Battlesquid - Second Prize": false,
      "Battlesquid - Under 20 Shots Prize": false,
      "Cafe Bar - Postman": true,
      "Chu Jelly Juice Shop - Give 15 Blue Chu Jelly": false,
      "Chu Jelly Juice Shop - Give 15 Green Chu Jelly": false,
      "House of Wealth Chest": false,
      "Ivan - Catch Killer Bees": false,
      "Jail - Maze Chest": true,
      "Jail - Tingle - First Gift": true,
      "Jail - Tingle - Second Gift": true,
      "Kamo - Full Moon Photo": false,
      "Kane - Place Postman Statue on Gate": false,
      "Kane - Place Shop Guru Statue on Gate": false,
      "Kane - Place Six Flags on Gate": false,
      "Kane - Place Six Idols on Gate": false,
      "Kreeb - Light Up Lighthouse": true,
      "Lenzo's House - Become Lenzo's Assistant": false,
      "Lenzo's House - Bring Forest Firefly": false,
      "Lenzo's House - Left Chest": false,
      "Lenzo's House - Right Chest": false,
      "Linda and Anton": false,
      "Maggie - Delivery Reward": true,
      "Maggie - Free Item": false,
      "Maggie's Father - Give 20 Skull Necklaces": false,
      "Mila - Follow the Thief": true,
      "Minenco - Miss Windfall Photo": false,
      "Mrs. Marie - Catch Killer Bees": false,
      "Mrs. Marie - Give 1 Joy Pendant": false,
      "Mrs. Marie - Give 21 Joy Pendants": false,
      "Mrs. Marie - Give 40 Joy Pendants": false,
      "Pirate Ship": false,
      "Pompie and Vera - Secret Meeting Photo": false,
      "Sam - Decorate the Town": false,
      "Sunken Treasure": false,
      "Tott - Teach Rhythm": false,
      "Transparent Chest": true,
      "Zunari - Stock Exotic Flower in Zunari's Shop": true,
    },
  },
  "fishmen_hints": false,
  "fix_auction": false,
  "hero_mode": false,
  "hint_importance": true,
  "hoho_hint_shards": false,
  "hoho_hints": false,
  "instant_text_boxes": true,
  "kamo_any_moon_phase": false,
  "korl_hints": true,
  "korl_hints_swords": false,
  "kreeb_hints_bows": false,
  "logic_obscurity": "None",
  "logic_precision": "None",
  "mila_speedup": "None",
  "mix_entrances": "Separate Dungeons From Caves and Fountains",
  "num_barren_hints": 2,
  "num_extra_starting_items": 1,
  "num_item_hints": 0,
  "num_location_hints": 3,
  "num_path_hints": 2,
  "num_required_bosses": 2,
  "num_starting_triforce_shards": 0,
  "open_drc": false,
  "prioritize_remote_hints": true,
  "prioritize_required_bosses": true,
  "progression_battlesquid": false,
  "progression_big_octos_gunboats": false,
  "progression_combat_secret_caves": false,
  "progression_dungeon_secrets": true,
  "progression_dungeons": true,
  "progression_expensive_purchases": false,
  "progression_eye_reef_chests": false,
  "progression_free_gifts": true,
  "progression_great_fairies": true,
  "progression_island_puzzles": true,
  "progression_long_sidequests": false,
  "progression_mail": true,
  "progression_minigames": false,
  "progression_misc": true,
  "progression_platforms_rafts": false,
  "progression_puzzle_secret_caves": true,
  "progression_savage_labyrinth": false,
  "progression_short_sidequests": true,
  "progression_spoils_trading": false,
  "progression_submarines": true,
  "progression_tingle_chests": false,
  "progression_treasure_charts": false,
  "progression_triforce_charts": false,
  "rainbow_rupee_progress": false,
  "randomize_boss_entrances": false,
  "randomize_charts": false,
  "randomize_dungeon_entrances": false,
  "randomize_enemies": false,
  "randomize_enemy_palettes": false,
  "randomize_fairy_fountain_entrances": false,
  "randomize_miniboss_entrances": false,
  "randomize_secret_cave_entrances": false,
  "randomize_secret_cave_inner_entrances": false,
  "randomize_starting_island": true,
  "remove_ballad_of_gales_warp_in_cutscene": false,
  "remove_music": false,
  "required_bosses": true,
  "reveal_full_sea_chart": true,
  "seed_name": "A",
  "shorten_mail_minigame": false,
  "shuffle_big_keys": "Own Dungeon",
  "shuffle_maps_and_compasses": "Start With",
  "shuffle_small_keys": "Own Dungeon",
  "skip_drc_plat_cs": false,
  "skip_rematch_bosses": true,
  "speedup_lenzos_assistant": false,
  "speedup_tingle_jail": false,
  "split_interdungeon_warps_by_required": false,
  "starting_blue_chu_jelly": 0,
  "starting_boko_baba_seed": 0,
  "starting_gear": {
    "Bait Bag": 0,
    "Ballad of Gales": 1,
    "Beedle's Chart": 0,
    "Bombs": 0,
    "Boomerang": 0,
    "Cabana Deed": 0,
    "Command Melody": 1,
    "DRC Big Key": 0,
    "DRC Compass": 0,
    "DRC Dungeon Map": 0,
    "DRC Small Key": 0,
    "Deku Leaf": 0,
    "Delivery Bag": 0,
    "Din's Pearl": 1,
    "Dragon Tingle Statue": 0,
    "ET Big Key": 0,
    "ET Compass": 0,
    "ET Dungeon Map": 0,
    "ET Small Key": 0,
    "Earth God's Lyric": 1,
    "Earth Tingle Statue": 0,
    "Empty Bottle": 0,
    "FF Compass": 0,
    "FF Dungeon Map": 0,
    "FW Big Key": 0,
    "FW Compass": 0,
    "FW Dungeon Map": 0,
    "FW Small Key": 0,
    "Farore's Pearl": 0,
    "Fill-Up Coupon": 0,
    "Forbidden Tingle Statue": 0,
    "Ghost Ship Chart": 0,
    "Goddess Tingle Statue": 0,
    "Grappling Hook": 0,
    "Great Fairy Chart": 0,
    "Hero's Charm": 0,
    "Hookshot": 0,
    "Hurricane Spin": 0,
    "Iron Boots": 0,
    "Light Ring Chart": 0,
    "Maggie's Letter": 0,
    "Magic Armor": 0,
    "Moblin's Letter": 0,
    "Nayru's Pearl": 1,
    "Note to Mom": 0,
    "Octo Chart": 0,
    "Platform Chart": 0,
    "Power Bracelets": 0,
    "Progressive Bomb Bag": 1,
    "Progressive Bow": 0,
    "Progressive Magic Meter": 2,
    "Progressive Picto Box": 0,
    "Progressive Quiver": 1,
    "Progressive Shield": 1,
    "Progressive Sword": 0,
    "Progressive Wallet": 0,
    "Secret Cave Chart": 0,
    "Skull Hammer": 0,
    "Song of Passing": 1,
    "Spoils Bag": 0,
    "Submarine Chart": 0,
    "Telescope": 1,
    "Tingle Tuner": 0,
    "Tingle's Chart": 0,
    "TotG Big Key": 0,
    "TotG Compass": 0,
    "TotG Dungeon Map": 0,
    "TotG Small Key": 0,
    "WT Big Key": 0,
    "WT Compass": 0,
    "WT Dungeon Map": 0,
    "WT Small Key": 0,
    "Wind God's Aria": 1,
    "Wind Tingle Statue": 0,
  },
  "starting_golden_feather": 0,
  "starting_green_chu_jelly": 0,
  "starting_hcs": 6,
  "starting_joy_pendant": 0,
  "starting_knights_crest": 0,
  "starting_pohs": 0,
  "starting_red_chu_jelly": 0,
  "starting_skull_necklace": 0,
  "swift_sail": true,
  "sword_mode": "Start with Hero's Sword",
  "trap_chests": false,
  "version": "dev_tanjo3.1.10.5_92859f0",
  "wallet_fill_behavior": false,
}
`;
